k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert --out k8s
        kompose.version: 1.36.0 (ae2a39403)
    labels:
        io.kompose.service: adminer
    name: adminer
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: adminer
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert --out k8s
                kompose.version: 1.36.0 (ae2a39403)
            labels:
                io.kompose.service: adminer
        spec:
            containers:
                - env:
                      - name: ADMINER_DEFAULT_SERVER
                        valueFrom:
                            configMapKeyRef:
                                name: app-config
                                key: ADMINER_DEFAULT_SERVER
                  image: adminer:5.3.0
                  name: chatapp-adminer
                  ports:
                      - containerPort: 8080
                        protocol: TCP
            restartPolicy: Always
