k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert --out k8s
        kompose.version: 1.36.0 (ae2a39403)
    labels:
        io.kompose.service: backend
    name: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: backend
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert --out k8s
                kompose.version: 1.36.0 (ae2a39403)
            labels:
                io.kompose.service: backend
        spec:
            containers:
                - env:
                      - name: AUTH_SECRET
                        valueFrom:
                            secretKeyRef:
                                name: app-secrets
                                key: AUTH_SECRET
                      - name: FRONTEND_URL
                        value: http://frontend:5173
                      - name: KEYCLOAK_CLIENT_ID
                        value: frontend
                      - name: KEYCLOAK_ISSUER
                        value: http://keycloak:8082/realms/chatapp
                      - name: MONGO_URI
                        valueFrom:
                            secretKeyRef:
                                name: app-secrets
                                key: MONGO_URI
                      - name: PORT
                        value: "8083"
                      - name: POSTGRES_URI
                        valueFrom:
                            secretKeyRef:
                                name: app-secrets
                                key: POSTGRES_URI
                  image: backend
                  name: chatapp-backend
                  ports:
                      - containerPort: 8083
                        protocol: TCP
            hostname: backend
            restartPolicy: Always
