k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (ae2a39403)
    labels:
        io.kompose.service: frontend
    name: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: frontend
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
                kompose.version: 1.36.0 (ae2a39403)
            labels:
                io.kompose.service: frontend
        spec:
            containers:
                - env:
                      - name: BACKEND_URL
                        valueFrom:
                            configMapKeyRef:
                                name: chatapp-config
                                key: BACKEND_URL
                      - name: KEYCLOAK_CLIENT_ID
                        valueFrom:
                            configMapKeyRef:
                                name: chatapp-config
                                key: KEYCLOAK_CLIENT_ID
                      - name: KEYCLOAK_CLIENT_SECRET
                        valueFrom:
                            secretKeyRef:
                                name: chatapp-secret
                                key: KEYCLOAK_CLIENT_SECRET
                      - name: KEYCLOAK_ISSUER
                        valueFrom:
                            configMapKeyRef:
                                name: chatapp-config
                                key: KEYCLOAK_ISSUER
                      - name: AUTH_SECRET
                        valueFrom:
                            secretKeyRef:
                                name: chatapp-secret
                                key: AUTH_SECRET
                  image: frontend
                  name: chatapp-frotend
                  ports:
                      - containerPort: 5173
                        protocol: TCP
            restartPolicy: Always
