k8s/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert --out k8s
        kompose.version: 1.36.0 (ae2a39403)
    labels:
        io.kompose.service: mongo-express
    name: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: mongo-express
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert --out k8s
                kompose.version: 1.36.0 (ae2a39403)
            labels:
                io.kompose.service: mongo-express
        spec:
            containers:
                - env:
                      - name: ME_CONFIG_BASICAUTH
                        valueFrom:
                            configMapKeyRef:
                                name: app-config
                                key: ME_CONFIG_BASICAUTH
                      - name: ME_CONFIG_MONGODB_ADMINPASSWORD
                        valueFrom:
                            secretKeyRef:
                                name: app-secrets
                                key: MONGO_PASSWORD
                      - name: ME_CONFIG_MONGODB_ADMINUSERNAME
                        valueFrom:
                            secretKeyRef:
                                name: app-secrets
                                key: MONGO_USER
                      - name: ME_CONFIG_MONGODB_PORT
                        valueFrom:
                            configMapKeyRef:
                                name: app-config
                                key: ME_CONFIG_MONGODB_PORT
                      - name: ME_CONFIG_MONGODB_SERVER
                        valueFrom:
                            configMapKeyRef:
                                name: app-config
                                key: ME_CONFIG_MONGODB_SERVER
                  image: mongo-express
                  name: chatapp-mongo-express
                  ports:
                      - containerPort: 8081
                        protocol: TCP
                  resources:
                      requests:
                          cpu: "50m"
                          memory: "64Mi"
                      limits:
                          cpu: "200m"
                          memory: "256Mi"
            restartPolicy: Always
