k8s/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: adminer
