k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: keycloak
