k8s/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "8091"
      port: 8091
      targetPort: 8081
  selector:
    io.kompose.service: mongo-express
