k8s/chatapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: chatapp-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - host: chatapp.local
          http:
              paths:
                  - path: /api/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 8083
                  - path: /(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 5173
